# xkeys-obs

./: CMakeLists.txt  XKeysDevice.cpp  XKeysDevice.h  plugin-main.cpp
